--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author-img: petermoorey.jpg
 about-author: Hello! I'm a network architect focusing on automation and security. When I'm not travelling I'm programming Python in VS Code!
 social-twitter: petermoorey
 social-facebook: peter.moorey
-social-github: pmoorey
+social-github: petermoorey
 social-linkedin: pmoorey
 social-email: petermoorey@gmail.com
 
