--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social-email: petermoorey@gmail.com
 discus-identifier:
 
 # Tracker
-analytics: # Google Analytics
+analytics: UA-175426526-1 # Google Analytics
 
 # Build Settings
 markdown: kramdown
