Added article Predicting Teleworking Issues With Machine Learning

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Peter Moorey
 author-img: petermoorey.jpg
-about-author: Hello! I'm a network architect focusing on automation and security. When I'm not travelling I'm programming Python in VS Code!
+about-author: Hello! I'm a Network Architect focusing on automation and security. When I'm not travelling I'm writing Python in VS Code!
 social-twitter: petermoorey
 social-facebook: peter.moorey
 social-github: petermoorey
