--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Peter Moorey's personal blog about network architecture, automation and cyber security
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://petermoorey.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
@@ -29,6 +29,7 @@ plugins:
   - jekyll-paginate
   - jemoji
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 paginate: 20
 paginate_path: "/page/:num"
