--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Peter Moorey
 author-img: petermoorey.jpg
-about-author: Hello! I'm a Network Architect focusing on automation and security. When I'm not travelling I'm writing Python in VS Code!
+about-author: Thanks for visiting! I'm a Network Architect blogging about topics like network management, automation, monitoring, security, programming and data analytics!
 social-twitter: petermoorey
 social-facebook: peter.moorey
 social-github: petermoorey
