--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+theme: just-the-docs
 title: Peter Moorey
 description: > # this means to ignore newlines until "baseurl:"
   Peter Moorey's personal blog about network architecture, automation and cyber security
